# phoenixke-masterclass

./: Capstone_Project_Group_7.ipynb  Capstone_Project_Group_7_FINAL.ipynb  LICENSE.md  README.md  hello.py  phoenixke-masterclass.code-workspace  pyproject.toml  requirements.txt
assignment-1/: assignment-1.ipynb
assignment-2/: jumia.robots.txt  jumia_scraper.py  jumia_scraper.side  jumiascraper.py  test_jumia_scraper.py  test_webscraper_io.py  webscraper-io.py  webscraper_io.py
assignment-2/output/: .gitignore
assignment-3/: Capstone_Project_Group_7.ipynb  Capstone_Project_Group_7_FINAL.ipynb
assignment-3/output/: .gitignore  Capstone_Project_Group_7.ipynb  sample.csv
