[project]
name = "phoenixke-masterclass"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
